[gd_scene load_steps=43 format=2]

[ext_resource path="res://assets/img/btns/right.png" type="Texture" id=1]
[ext_resource path="res://assets/img/btns/dwarf.png" type="Texture" id=2]
[ext_resource path="res://assets/img/btns/human.png" type="Texture" id=3]
[ext_resource path="res://assets/img/btns/pause.png" type="Texture" id=4]
[ext_resource path="res://assets/img/btns/left.png" type="Texture" id=5]
[ext_resource path="res://assets/img/btns/goblin.png" type="Texture" id=6]
[ext_resource path="res://assets/img/btns/elf.png" type="Texture" id=7]
[ext_resource path="res://assets/font/Poppins-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets2/buttons_&_shit/skill1.png" type="Texture" id=9]
[ext_resource path="res://assets/img/btns/exit.png" type="Texture" id=10]
[ext_resource path="res://scripts/Gameplay.gd" type="Script" id=11]
[ext_resource path="res://assets/img/btns/audio.png" type="Texture" id=12]
[ext_resource path="res://assets/img/bg/alpha.png" type="Texture" id=13]
[ext_resource path="res://assets/img/btns/main_menu.png" type="Texture" id=14]
[ext_resource path="res://assets/img/btns/resume.png" type="Texture" id=15]
[ext_resource path="res://assets/img/text/pause.png" type="Texture" id=16]
[ext_resource path="res://assets/img/text/spritesheet.png" type="Texture" id=17]
[ext_resource path="res://assets2/buttons_&_shit/skill2.png" type="Texture" id=18]
[ext_resource path="res://assets2/buttons_&_shit/skill3.png" type="Texture" id=19]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 50 )

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 4
extra_spacing_top = -12
font_data = ExtResource( 8 )

[sub_resource type="CircleShape2D" id=21]
radius = 50.0

[sub_resource type="CircleShape2D" id=22]
radius = 50.0

[sub_resource type="CircleShape2D" id=23]
radius = 50.0

[sub_resource type="CircleShape2D" id=6]
radius = 79.19

[sub_resource type="CircleShape2D" id=7]
radius = 79.19

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 80, 80 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 50, 65 )

[sub_resource type="CircleShape2D" id=8]
radius = 79.19

[sub_resource type="CircleShape2D" id=9]
radius = 79.19

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 80, 80 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 80, 80 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 330, 70 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 330, 70 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=5]
resource_name = "countdown"
length = 4.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 0, 3 ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("hud_menu/buttons/VBoxContainer/HBoxContainer2/dwarf:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("hud_menu/buttons/VBoxContainer/HBoxContainer2/dwarf:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1.3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("hud_menu/buttons/VBoxContainer/HBoxContainer/btns/HBoxContainer/elf:rect_scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1.3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("hud_menu/buttons/VBoxContainer/HBoxContainer/btns/HBoxContainer/elf:rect_scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1.3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("hud_menu/buttons/VBoxContainer/HBoxContainer2/goblin:rect_scale:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1.3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("hud_menu/buttons/VBoxContainer/HBoxContainer2/goblin:rect_scale:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1.3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("hud_menu/buttons/VBoxContainer/HBoxContainer/btns/HBoxContainer/human:rect_scale:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1.3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("hud_menu/buttons/VBoxContainer/HBoxContainer/btns/HBoxContainer/human:rect_scale:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1.3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("hud_menu/buttons/VBoxContainer/HBoxContainer/left:rect_scale:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 1.3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("hud_menu/buttons/VBoxContainer/HBoxContainer/left:rect_scale:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 1.3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=13]
resource_name = "dwarf_select"
loop = true
step = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("hud_menu/buttons/VBoxContainer/HBoxContainer2/dwarf:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.3, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("hud_menu/buttons/VBoxContainer/HBoxContainer2/dwarf:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.3, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Animation" id=14]
resource_name = "elf_select"
loop = true
step = 0.5

[sub_resource type="Animation" id=15]
resource_name = "goblin_select"
loop = true
step = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("hud_menu/buttons/VBoxContainer/HBoxContainer2/goblin:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.3, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("hud_menu/buttons/VBoxContainer/HBoxContainer2/goblin:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.3, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Animation" id=16]
resource_name = "human_select"
loop = true
step = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("hud_menu/buttons/VBoxContainer/HBoxContainer/btns/HBoxContainer/human:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.3, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("hud_menu/buttons/VBoxContainer/HBoxContainer/btns/HBoxContainer/human:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.3, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Animation" id=17]
resource_name = "left_button"
loop = true
step = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("hud_menu/buttons/VBoxContainer/HBoxContainer/left:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.3, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("hud_menu/buttons/VBoxContainer/HBoxContainer/left:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.3, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("hud_menu/buttons/VBoxContainer/HBoxContainer/btns/HBoxContainer/elf:rect_scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.3, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("hud_menu/buttons/VBoxContainer/HBoxContainer/btns/HBoxContainer/elf:rect_scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.3, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[node name="hud" type="MarginContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
script = ExtResource( 11 )

[node name="hud_menu" type="VBoxContainer" parent="."]
margin_right = 680.0
margin_bottom = 1240.0
alignment = 2

[node name="upper_hud" type="HBoxContainer" parent="hud_menu"]
margin_right = 680.0
margin_bottom = 732.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="pause" type="TextureRect" parent="hud_menu/upper_hud"]
margin_right = 336.0
margin_bottom = 732.0
size_flags_horizontal = 3
texture = ExtResource( 4 )

[node name="pause_button" type="TouchScreenButton" parent="hud_menu/upper_hud/pause"]
position = Vector2( 0, -4 )
shape = SubResource( 2 )

[node name="points" type="VBoxContainer" parent="hud_menu/upper_hud"]
margin_left = 344.0
margin_right = 680.0
margin_bottom = 732.0
size_flags_horizontal = 3

[node name="point_label" type="Label" parent="hud_menu/upper_hud/points"]
margin_right = 336.0
margin_bottom = 79.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "123"
align = 2

[node name="VBoxContainer" type="VBoxContainer" parent="hud_menu"]
margin_top = 740.0
margin_right = 680.0
margin_bottom = 946.0
custom_constants/separation = 30

[node name="joker" type="TextureRect" parent="hud_menu/VBoxContainer"]
margin_right = 680.0
margin_bottom = 88.0
texture = ExtResource( 9 )

[node name="joker_button" type="TouchScreenButton" parent="hud_menu/VBoxContainer/joker"]
position = Vector2( -12, -10 )
shape = SubResource( 21 )

[node name="tempo" type="TextureRect" parent="hud_menu/VBoxContainer"]
margin_top = 118.0
margin_right = 680.0
margin_bottom = 206.0
texture = ExtResource( 18 )

[node name="tempo_button" type="TouchScreenButton" parent="hud_menu/VBoxContainer/tempo"]
position = Vector2( -12, -8 )
shape = SubResource( 22 )

[node name="slow_motion" type="TextureRect" parent="hud_menu/VBoxContainer"]
visible = false
margin_top = 236.0
margin_right = 680.0
margin_bottom = 324.0
texture = ExtResource( 19 )

[node name="slow_motion_button" type="TouchScreenButton" parent="hud_menu/VBoxContainer/slow_motion"]
position = Vector2( -12, -14 )
shape = SubResource( 23 )

[node name="buttons" type="HBoxContainer" parent="hud_menu"]
margin_top = 954.0
margin_right = 680.0
margin_bottom = 1240.0

[node name="VBoxContainer" type="VBoxContainer" parent="hud_menu/buttons"]
margin_right = 680.0
margin_bottom = 286.0
size_flags_horizontal = 3
custom_constants/separation = 30

[node name="HBoxContainer2" type="HBoxContainer" parent="hud_menu/buttons/VBoxContainer"]
margin_right = 680.0
margin_bottom = 128.0
custom_constants/separation = 30
alignment = 2

[node name="goblin" type="TextureRect" parent="hud_menu/buttons/VBoxContainer/HBoxContainer2"]
margin_left = 393.0
margin_right = 522.0
margin_bottom = 128.0
rect_scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 6 )

[node name="TouchScreenButton5" type="TouchScreenButton" parent="hud_menu/buttons/VBoxContainer/HBoxContainer2/goblin"]
position = Vector2( -21, -22 )
shape = SubResource( 6 )
action = "ui_up"

[node name="dwarf" type="TextureRect" parent="hud_menu/buttons/VBoxContainer/HBoxContainer2"]
margin_left = 552.0
margin_right = 680.0
margin_bottom = 128.0
rect_scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 2 )

[node name="TouchScreenButton5" type="TouchScreenButton" parent="hud_menu/buttons/VBoxContainer/HBoxContainer2/dwarf"]
position = Vector2( -20, -22 )
shape = SubResource( 7 )
action = "ui_down"

[node name="HBoxContainer" type="HBoxContainer" parent="hud_menu/buttons/VBoxContainer"]
margin_top = 158.0
margin_right = 680.0
margin_bottom = 286.0
size_flags_horizontal = 3
custom_constants/separation = 30

[node name="left" type="TextureRect" parent="hud_menu/buttons/VBoxContainer/HBoxContainer"]
margin_right = 94.0
margin_bottom = 128.0
rect_scale = Vector2( 1.3, 1.3 )
rect_clip_content = true
texture = ExtResource( 5 )

[node name="TouchScreenButton4" type="TouchScreenButton" parent="hud_menu/buttons/VBoxContainer/HBoxContainer/left"]
position = Vector2( 4, -20 )
shape = SubResource( 10 )
action = "left"

[node name="right" type="TextureRect" parent="hud_menu/buttons/VBoxContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 364.0
margin_bottom = 128.0
size_flags_horizontal = 3
texture = ExtResource( 1 )

[node name="TouchScreenButton3" type="TouchScreenButton" parent="hud_menu/buttons/VBoxContainer/HBoxContainer/right"]
position = Vector2( -8, -4 )
shape = SubResource( 11 )
action = "right"

[node name="btns" type="VBoxContainer" parent="hud_menu/buttons/VBoxContainer/HBoxContainer"]
margin_left = 394.0
margin_right = 680.0
margin_bottom = 128.0

[node name="HBoxContainer" type="HBoxContainer" parent="hud_menu/buttons/VBoxContainer/HBoxContainer/btns"]
margin_right = 286.0
margin_bottom = 128.0
custom_constants/separation = 30

[node name="human" type="TextureRect" parent="hud_menu/buttons/VBoxContainer/HBoxContainer/btns/HBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
rect_scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 3 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="hud_menu/buttons/VBoxContainer/HBoxContainer/btns/HBoxContainer/human"]
position = Vector2( -22, -20 )
shape = SubResource( 8 )
action = "ui_left"

[node name="elf" type="TextureRect" parent="hud_menu/buttons/VBoxContainer/HBoxContainer/btns/HBoxContainer"]
margin_left = 158.0
margin_right = 286.0
margin_bottom = 128.0
rect_scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 7 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="hud_menu/buttons/VBoxContainer/HBoxContainer/btns/HBoxContainer/elf"]
position = Vector2( -20, -20 )
shape = SubResource( 9 )
action = "ui_right"

[node name="pasue_menu" type="HBoxContainer" parent="."]
visible = false
margin_right = 680.0
margin_bottom = 1240.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="bg" type="TextureRect" parent="pasue_menu"]
show_behind_parent = true
margin_bottom = 1240.0
texture = ExtResource( 13 )
expand = true
stretch_mode = 7

[node name="VBoxContainer" type="VBoxContainer" parent="pasue_menu"]
margin_left = 8.0
margin_right = 680.0
margin_bottom = 1240.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="pasue_menu/VBoxContainer"]
margin_right = 672.0
margin_bottom = 148.0
size_flags_horizontal = 3

[node name="exit_btn" type="TextureRect" parent="pasue_menu/VBoxContainer/HBoxContainer"]
margin_right = 516.0
margin_bottom = 148.0
size_flags_horizontal = 3
texture = ExtResource( 10 )
stretch_mode = 3

[node name="rage_quit" type="TouchScreenButton" parent="pasue_menu/VBoxContainer/HBoxContainer/exit_btn"]
shape = SubResource( 18 )

[node name="audio-btn" type="TextureRect" parent="pasue_menu/VBoxContainer/HBoxContainer"]
margin_left = 524.0
margin_right = 672.0
margin_bottom = 148.0
texture = ExtResource( 12 )
stretch_mode = 3

[node name="audio" type="TouchScreenButton" parent="pasue_menu/VBoxContainer/HBoxContainer/audio-btn"]
shape = SubResource( 19 )

[node name="VBoxContainer" type="VBoxContainer" parent="pasue_menu/VBoxContainer"]
margin_top = 168.0
margin_right = 672.0
margin_bottom = 872.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="pasue_menu/VBoxContainer/VBoxContainer"]
margin_top = 283.0
margin_right = 672.0
margin_bottom = 421.0

[node name="title" type="TextureRect" parent="pasue_menu/VBoxContainer/VBoxContainer/CenterContainer2"]
margin_left = 164.0
margin_right = 508.0
margin_bottom = 138.0
texture = ExtResource( 16 )
stretch_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="pasue_menu/VBoxContainer"]
margin_top = 892.0
margin_right = 672.0
margin_bottom = 1036.0

[node name="play-btn" type="TextureRect" parent="pasue_menu/VBoxContainer/CenterContainer"]
margin_left = 8.0
margin_right = 664.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 138 )
texture = ExtResource( 15 )
stretch_mode = 3

[node name="resume_button" type="TouchScreenButton" parent="pasue_menu/VBoxContainer/CenterContainer/play-btn"]
position = Vector2( -4, -8 )
shape = SubResource( 3 )

[node name="CenterContainer2" type="CenterContainer" parent="pasue_menu/VBoxContainer"]
margin_top = 1056.0
margin_right = 672.0
margin_bottom = 1240.0

[node name="play-btn2" type="TextureRect" parent="pasue_menu/VBoxContainer/CenterContainer2"]
margin_left = 8.0
margin_right = 664.0
margin_bottom = 184.0
rect_min_size = Vector2( 0, 138 )
texture = ExtResource( 14 )
stretch_mode = 3

[node name="main_menu" type="TouchScreenButton" parent="pasue_menu/VBoxContainer/CenterContainer2/play-btn2"]
pause_mode = 2
position = Vector2( -4, 0 )
shape = SubResource( 20 )

[node name="countdown" type="VBoxContainer" parent="."]
pause_mode = 2
margin_right = 680.0
margin_bottom = 1240.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="countdown"]
anims/RESET = SubResource( 4 )
anims/countdown = SubResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="countdown"]
margin_top = 620.0
margin_right = 680.0
margin_bottom = 620.0
alignment = 1

[node name="Sprite" type="Sprite" parent="countdown/HBoxContainer"]
position = Vector2( 348, -104 )
scale = Vector2( 2, 2 )
texture = ExtResource( 17 )
hframes = 4
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/dwarf_select = SubResource( 13 )
anims/elf_select = SubResource( 14 )
anims/goblin_select = SubResource( 15 )
anims/human_select = SubResource( 16 )
anims/left_button = SubResource( 17 )

[connection signal="pressed" from="hud_menu/upper_hud/pause/pause_button" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="hud_menu/VBoxContainer/slow_motion/slow_motion_button" to="." method="_on_slow_motion_button_pressed"]
[connection signal="pressed" from="pasue_menu/VBoxContainer/HBoxContainer/exit_btn/rage_quit" to="." method="_on_rage_quit_pressed"]
[connection signal="pressed" from="pasue_menu/VBoxContainer/CenterContainer/play-btn/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="pasue_menu/VBoxContainer/CenterContainer2/play-btn2/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="animation_finished" from="countdown/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
